# platspec-operator

./: .cr.yaml  .gitignore  CNAME  Dockerfile  LICENSE  Makefile  README.md  Tiltfile  index.html  index.yaml  pyproject.toml
.github/workflows/: ci.yaml  release-chart.yaml
blueprints/broken-kcl-syntax/: Makefile  blueprint.yaml  kcl.mod  main.k
blueprints/configmap-platform-metadata/: Makefile  blueprint.yaml  kcl.mod  main.k
blueprints/configmap-platform-metadata/schemas/: config.k  outputs.k
blueprints/configmap-platform-metadata/tests/fixtures/: basic.yaml
blueprints/namespace-bootstrap/: blueprint.yaml  kcl.mod  main.k
blueprints/namespace-bootstrap/schemas/: config.k  outputs.k
blueprints/namespace-bootstrap/tests/fixtures/: basic.yaml
blueprints/namespace-rbac/: blueprint.yaml  kcl.mod  main.k
blueprints/namespace-rbac/schemas/: config.k  outputs.k
blueprints/namespace-rbac/tests/fixtures/: basic.yaml
chart/: Chart.yaml  values.yaml
chart/crds/: blueprintbindings.yaml  blueprintregistries.yaml  clusters.yaml  credentials.yaml  environments.yaml  images.yaml  networks.yaml  nodes.yaml  platforms.yaml  providers.yaml  softwaregroups.yaml
chart/templates/: _helpers.tpl  clusterrole.yaml  clusterrolebinding.yaml  configmap.yaml  deployment.yaml  serviceaccount.yaml
config/: dev.yaml
examples/: platform.yaml
scripts/: create-podman-kind-cluster.sh
src/platspec_operator/: __init__.py  config.py  logs.py  main.py
src/platspec_operator/core/: __init__.py  aggregator.py  applier.py  context.py  discovery.py  evaluator.py  executor.py  fetcher.py  resolver.py  secrets.py
src/platspec_operator/handlers/: __init__.py  binding.py  infrastructure.py  platform.py  registry.py  startup.py  status.py
src/platspec_operator/models/: __init__.py  blueprint.py  crd.py  infrastructure.py  platform.py  registry.py
tests/: conftest.py
tests/fixtures/blueprints/minimal/: main.k
tests/fixtures/blueprints/status-test/: blueprint.yaml  main.k
tests/integration/: conftest.py  test_binding_and_status.py  test_platform_lifecycle.py
tests/unit/core/: test_aggregator.py  test_applier.py  test_broken_blueprint.py  test_context.py  test_discovery.py  test_evaluator.py  test_executor.py  test_fetcher.py  test_resolver.py  test_secrets.py  test_topo_sort.py
